# BAF

./: Cargo.toml  README.md
crate-bin/: Cargo.toml
crate-bin/src/: args.rs  main.rs  tree.rs  utils.rs
crate-lib/: Cargo.toml
crate-lib/src/: archive.rs  config.rs  coverage.rs  diagnostic.rs  easy.rs  easy_archive.rs  easy_iter.rs  file_reader.rs  health.rs  iter.rs  lib.rs  source.rs  with_paths.rs  with_paths_mut.rs
crate-lib/src/data/: directory.rs  file.rs  file_segment.rs  ft_segment.rs  header.rs  mod.rs  name.rs  path.rs  timestamp.rs  utils.rs
crate-lib/src/source/: cursor.rs  file.rs  in_memory.rs  mod.rs  on_std.rs  real_file.rs  seekables.rs
crate-lib/src/tests/: archive.rs  complex.rs  coverage.rs  file_reader.rs  fuzz_archive_open.rs  fuzz_name_decode.rs  fuzz_path_new.rs  fuzz_roundtrip.rs  header.rs  iter.rs  mod.rs  name.rs  path.rs  with_paths.rs
docs/: specs.md
