[package]
name = "baf_bin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "baf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
baf = { path = "../crate-lib" }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
log = { version = "0.4.29", features = ["std"] }
walkdir = "2.5.0"
