[package]
name = "baf_bin"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "baf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
baf = { path = "../crate-lib" }
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
jiff = "0.2.23"
log = { version = "0.4.29", features = ["std"] }
walkdir = "2.5.0"
